--- a/index.html
+++ b/index.html
@@ -114,6 +114,54 @@
             </div>
         </section>
 
+        <!-- Taller -->
+        <section class="section fade-in">
+            <h2>Taller: Evaluación de Módulos ERP</h2>
+            <div class="taller-card">
+                <div class="taller-content">
+                    <div class="taller-info">
+                        <h3>🔍 Análisis Técnico de Sistemas ERP</h3>
+                        <p>Desarrolla competencias profesionales en la evaluación y selección de sistemas de información empresariales mediante metodologías avanzadas.</p>
+                        
+                        <div class="taller-objectives">
+                            <h4>Objetivos:</h4>
+                            <ul>
+                                <li>Aplicar metodologías profesionales para selección de sistemas ERP</li>
+                                <li>Analizar técnicamente módulos de sistemas empresariales</li>
+                                <li>Evaluar críticamente soluciones tecnológicas para procesos de negocio</li>
+                                <li>Integrar conocimientos de ingeniería de sistemas e industrial</li>
+                            </ul>
+                        </div>
+
+                        <div class="taller-details">
+                            <div class="detail-item">
+                                <strong>📅 Fecha de entrega:</strong> 25 de septiembre - 18:00
+                            </div>
+                            <div class="detail-item">
+                                <strong>🎯 Modalidad:</strong> Equipos de trabajo con exposición
+                            </div>
+                            <div class="detail-item">
+                                <strong>⏱️ Tiempo presentación:</strong> 16 minutos por equipo
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="taller-action">
+                        <div class="pdf-preview">
+                            <div class="pdf-icon">📄</div>
+                            <div class="pdf-info">
+                                <h4>Documento del Taller</h4>
+                                <p>Instrucciones completas, metodología, criterios de evaluación y entregables</p>
+                            </div>
+                        </div>
+                        <a href="./assets/docs/taller18sep.pdf" target="_blank" class="btn-download">
+                            📥 Descargar Instrucciones PDF
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Bibliography -->
         <section class="section fade-in">
             <h2>Bibliografía</h2>
