--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
         </section>
 
         <!-- Proyecto Integrador -->
-        <!-- Proyecto Integrador -->
         <section class="section fade-in">
             <h2>📋 Proyecto Integrador</h2>
             <div class="proyecto-card">
@@ -143,7 +142,7 @@
 
                         <div class="proyecto-details">
                             <div class="detail-item">
-                                <strong>📅 Fecha de entrega:</strong> Por confirmar
+                                <strong>📅 Fecha de entrega:</strong> 23 de octubre
                             </div>
                             <div class="detail-item">
                                 <strong>👥 Modalidad:</strong> Trabajo en equipo
@@ -157,6 +156,49 @@
                     <div class="proyecto-action">
                         <img src="./assets/images/unal_col.jpg" alt="UNAL Colombia" class="proyecto-image">
                         <a href="./assets/docs/Primer_entregable.pdf" target="_blank" class="btn-download-proyecto">
+                            📥 Descargar Documento PDF
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section fade-in">
+            <h2>🏗️ Segundo Entregable</h2>
+            <div class="proyecto-card segundo-entregable">
+                <div class="proyecto-content">
+                    <div class="proyecto-info">
+                        <h3>🎯 Segundo Entregable del Proyecto</h3>
+                        <p>Continuación del desarrollo integral del sistema de información. Este entregable profundiza
+                            en el diseño técnico y la arquitectura de la solución propuesta en el primer entregable.</p>
+
+                        <div class="proyecto-requirements">
+                            <h4>Componentes del Entregable:</h4>
+                            <ul>
+                                <li>Diseño detallado del sistema de información</li>
+                                <li>Modelo de datos y arquitectura técnica</li>
+                                <li>Especificación de interfaces (mockups/wireframes)</li>
+                                <li>Definición de procesos y flujos de trabajo</li>
+                                <li>Plan de implementación y consideraciones técnicas</li>
+                            </ul>
+                        </div>
+
+                        <div class="proyecto-details">
+                            <div class="detail-item">
+                                <strong>📅 Fecha de entrega:</strong> 13 de noviembre
+                            </div>
+                            <div class="detail-item">
+                                <strong>👥 Modalidad:</strong> Trabajo en equipo
+                            </div>
+                            <div class="detail-item">
+                                <strong>💯 Peso evaluativo:</strong> Parte del 40% del proyecto final
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="proyecto-action">
+                        <img src="./assets/images/iconAsg.png" alt="Icono Asignatura" class="proyecto-image" style="max-height: 400px; height: auto;">
+                        <a href="./assets/docs/segundo_entregable.pdf" target="_blank" class="btn-download-proyecto">
                             📥 Descargar Documento PDF
                         </a>
                     </div>
